--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "server": "json-server db.json --port 5000"
+    "server": "echo y | npx json-server db.json --port 5000"
   },
   "prettier": {
     "printWidth": 100,
